minor style changes to make sure buttons stack nicely on smaller devices

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,8 @@ html {
   color: white;
   background-color: #222222;
   padding: 10px 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -41,6 +43,8 @@ html {
   color: white;
   background-color: #222222;
   padding: 8px 8px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -56,7 +60,8 @@ html {
   text-decoration: none;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 15px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 input:focus {
